tests/NormalTests/paczka1/fuzzy1/56847200.err
Error in line 6: A954 A825 90,0
Error in line 11: KnZ1ZIVGIjR A954 5,3
Error in line 14: KnZ1ZIVGIjR S516 92,4
Error in line 28: aSfIry S516 73,0
